--- a/OmnieCommerceAdmin/Storyboards/SlideMenuShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/SlideMenuShow.storyboard
@@ -37,10 +37,10 @@
             </objects>
             <point key="canvasLocation" x="2" y="-41"/>
         </scene>
-        <!--OrganizationsListShowVC-->
+        <!--OrganizationsListNC-->
         <scene sceneID="4tB-Ps-2Am">
             <objects>
-                <viewControllerPlaceholder storyboardName="OrganizationsListShow" referencedIdentifier="OrganizationsListShowVC" id="bWw-Nb-Gr2" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="OrganizationsListShow" referencedIdentifier="OrganizationsListNC" id="bWw-Nb-Gr2" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="odK-hq-9DR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="617" y="-143"/>
